# rafesia-svn

./: AUTHORS  ChangeLog  Makefile  Makefile.am  TODO  configure  configure.in
include/: .rf_conf  Makefile.am
plugins/: Makefile.am
plugins/rf-media-mplayer/: .rf_conf  Makefile.am  rf-media-module-funcs.c  rf-media-mplayer.c  rf-media-mplayer.h
plugins/rf-media-xine/: .rf_conf  Makefile.am  rf-media-module-funcs.c  rf-media-xine.c
src/: .rf_conf  Makefile  Makefile.am  plugins.c  rafesia.c  rafesia.h
src/core/: Makefile  internal.c  internal.h
src/plugins/: Makefile  plugins.c  plugins.h
src/plugins/rf-media-mplayer/: Makefile  rf-media-module-funcs.c  rf-media-mplayer.c  rf-media-mplayer.h
src/plugins/rf-media-xine/: Makefile  rf-media-module-funcs.c  rf-media-xine.c  rf-media-xine.h
src/plugins/xine/: Makefile  gtkxine.c  gtkxine.h  xine_media_module.c
src/ui/: Makefile  rf-widget-mcontainer.c  rf-widget-mcontainer.h  rf-widget-mixer.c  rf-widget-mixer.h  rf-window-about.c  rf-window-main.c  rf-window-main.h
